fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__interface-implicit-typing_C002.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C002.f90:4:5: C002 interface 'function' missing 'implicit none'
  |
2 |   implicit none
3 |   interface
4 |     integer function myfunc(x)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ C002
5 |       integer, intent(in) :: x
6 |     end function myfunc
7 |   end interface
  |

./resources/test/fixtures/correctness/C002.f90:13:5: C002 interface 'subroutine' missing 'implicit none'
   |
11 |   implicit none
12 |   interface
13 |     subroutine myfunc2(x)
   |     ^^^^^^^^^^^^^^^^^^^^^ C002
14 |       integer, intent(inout) :: x
15 |     end subroutine myfunc2
16 |   end interface
   |
