fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__interface-implicit-typing_C052.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C052.f90:4:5: C052 interface 'function' missing 'implicit none'
  |
2 |   implicit none
3 |   interface
4 |     integer function myfunc(x)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ C052
5 |       integer, intent(in) :: x
6 |     end function myfunc
  |

./resources/test/fixtures/correctness/C052.f90:13:5: C052 interface 'subroutine' missing 'implicit none'
   |
11 |   implicit none
12 |   interface
13 |     subroutine myfunc2(x)
   |     ^^^^^^^^^^^^^^^^^^^^^ C052
14 |       integer, intent(inout) :: x
15 |     end subroutine myfunc2
   |
