fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__misleading-inline-if-continuation_C152.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C152.f90:6:3: C152 [*] Line continuation in inline if-statement is misleading
  |
4 |     integer :: i
5 |
6 | /   if (condition) &
7 | |       print *, "Hello"
  | |______________________^ C152
8 |         print *, "World!"
  |
  = help: Convert to `if(...) then` block

ℹ Safe fix
3 3 |   logical, parameter :: condition = .false.
4 4 |   integer :: i
5 5 | 
6   |-  if (condition) &
7   |-      print *, "Hello"
  6 |+  if (condition) then
  7 |+    print *, "Hello"
  8 |+  end if
8 9 |       print *, "World!"
9 10 | 
10 11 |   if (condition) &

./resources/test/fixtures/correctness/C152.f90:10:3: C152 [*] Line continuation in inline if-statement is misleading
   |
 8 |         print *, "World!"
 9 |
10 | /   if (condition) &
11 | |       print *, "Hello"; print *, "World!"
   | |______________________^ C152
12 |
13 |     if (condition) print *, &
   |
   = help: Convert to `if(...) then` block

ℹ Safe fix
7  7  |       print *, "Hello"
8  8  |       print *, "World!"
9  9  | 
10    |-  if (condition) &
11    |-      print *, "Hello"; print *, "World!"
   10 |+  if (condition) then
   11 |+    print *, "Hello"
   12 |+  end if; print *, "World!"
12 13 | 
13 14 |   if (condition) print *, &
14 15 |     "Hello world!"

./resources/test/fixtures/correctness/C152.f90:13:3: C152 [*] Line continuation in inline if-statement is misleading
   |
11 |         print *, "Hello"; print *, "World!"
12 |
13 | /   if (condition) print *, &
14 | |     "Hello world!"
   | |__________________^ C152
15 |
16 |     if (condition) print *, &
   |
   = help: Convert to `if(...) then` block

ℹ Safe fix
10 10 |   if (condition) &
11 11 |       print *, "Hello"; print *, "World!"
12 12 | 
13    |-  if (condition) print *, &
   13 |+  if (condition) then
   14 |+    print *, &
14 15 |     "Hello world!"
   16 |+  end if
15 17 | 
16 18 |   if (condition) print *, &
17 19 |      & "Hello"

./resources/test/fixtures/correctness/C152.f90:16:3: C152 [*] Line continuation in inline if-statement is misleading
   |
14 |       "Hello world!"
15 |
16 | /   if (condition) print *, &
17 | |      & "Hello"
   | |______________^ C152
   |
   = help: Convert to `if(...) then` block

ℹ Safe fix
13 13 |   if (condition) print *, &
14 14 |     "Hello world!"
15 15 | 
16    |-  if (condition) print *, &
   16 |+  if (condition) then
   17 |+    print *, &
17 18 |      & "Hello"
   19 |+  end if
18 20 | 
19 21 | 
20 22 |   ! Inline if statements on a single line are permitted.

./resources/test/fixtures/correctness/C152.f90:28:16: C152 [*] Line continuation in inline if-statement is misleading
   |
27 |     ! Some cases might result in weird indentation.
28 |     do i = 1, 3; if (i == 2) &
   |  ________________^
29 | |     print *, "foo"; end do
   | |__________________^ C152
30 |   end program p
   |
   = help: Convert to `if(...) then` block

ℹ Safe fix
25 25 |     print *, "baz"
26 26 | 
27 27 |   ! Some cases might result in weird indentation.
28    |-  do i = 1, 3; if (i == 2) &
29    |-    print *, "foo"; end do
   28 |+  do i = 1, 3; if (i == 2) then
   29 |+    print *, "foo"
   30 |+  end if; end do
30 31 | end program p
