fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__missing-accessibility-statement_C131.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C131.f90:20:1: C131 module 'bad_module' missing default accessibility statement
   |
18 | end module ok_module2
19 |
20 | module bad_module
   | ^^^^^^^^^^^^^^^^^ C131
21 |   ! This is bad
22 | end module bad_module
   |

./resources/test/fixtures/correctness/C131.f90:24:1: C131 module 'only_some_private_module' missing default accessibility statement
   |
22 | end module bad_module
23 |
24 | module only_some_private_module
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ C131
25 |   ! This is bad
26 |   private :: foo
   |
