fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__missing-default-case_C001.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C001.f90:4:3: C001 Missing default case may not handle all values
   |
 2 |     implicit none (type, external)
 3 |     integer :: foo = 4
 4 | /   select case(foo)
 5 | |   case(1)
 6 | |     print*, "one"
 7 | |   case(2)
 8 | |     print*, "two"
 9 | |   end select
   | |____________^ C001
10 |     
11 |     select case(foo)
   |
   = help: Add 'case default'
