fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__missing-end-label_C143.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C143.f90:9:3: C143 [*] 'end associate' statement in named 'associate' block missing label
   |
 8 |   label1: associate(x => 1 + 1)
 9 |   end associate
   |   ^^^^^^^^^^^^^ C143
10 |
11 |   label2: block
   |
   = help: Add label 'label1'

ℹ Safe fix
6  6  |   type(team_type) :: parent
7  7  | 
8  8  |   label1: associate(x => 1 + 1)
9     |-  end associate
   9  |+  end associate label1
10 10 | 
11 11 |   label2: block
12 12 |   end block

./resources/test/fixtures/correctness/C143.f90:15:3: C143 [*] 'end critical' statement in named 'critical' block missing label
   |
14 |   label3: critical
15 |   end critical
   |   ^^^^^^^^^^^^ C143
16 |
17 |   form team(1, parent)
   |
   = help: Add label 'label3'

ℹ Safe fix
12 12 |   end block
13 13 | 
14 14 |   label3: critical
15    |-  end critical
   15 |+  end critical label3
16 16 | 
17 17 |   form team(1, parent)
18 18 |   label4: change team(parent)

./resources/test/fixtures/correctness/C143.f90:19:3: C143 [*] 'end team' statement in named 'change' block missing label
   |
17 |   form team(1, parent)
18 |   label4: change team(parent)
19 |   end team
   |   ^^^^^^^^ C143
20 |
21 |   label5: do i = 1, 10
   |
   = help: Add label 'label4'

ℹ Safe fix
16 16 | 
17 17 |   form team(1, parent)
18 18 |   label4: change team(parent)
19    |-  end team
   19 |+  end team label4
20 20 | 
21 21 |   label5: do i = 1, 10
22 22 |   end do

./resources/test/fixtures/correctness/C143.f90:22:3: C143 [*] 'end do' statement in named 'do' block missing label
   |
21 |   label5: do i = 1, 10
22 |   end do
   |   ^^^^^^ C143
23 |
24 |   label6: forall(i=1:3)
   |
   = help: Add label 'label5'

ℹ Safe fix
19 19 |   end team
20 20 | 
21 21 |   label5: do i = 1, 10
22    |-  end do
   22 |+  end do label5
23 23 | 
24 24 |   label6: forall(i=1:3)
25 25 |   end forall

./resources/test/fixtures/correctness/C143.f90:25:3: C143 [*] 'end forall' statement in named 'forall' block missing label
   |
24 |   label6: forall(i=1:3)
25 |   end forall
   |   ^^^^^^^^^^ C143
26 |
27 |   label7: if (.true.) then
   |
   = help: Add label 'label6'

ℹ Safe fix
22 22 |   end do
23 23 | 
24 24 |   label6: forall(i=1:3)
25    |-  end forall
   25 |+  end forall label6
26 26 | 
27 27 |   label7: if (.true.) then
28 28 |   end if

./resources/test/fixtures/correctness/C143.f90:28:3: C143 [*] 'end if' statement in named 'if' block missing label
   |
27 |   label7: if (.true.) then
28 |   end if
   |   ^^^^^^ C143
29 |
30 |   label8: select case(i)
   |
   = help: Add label 'label7'

ℹ Safe fix
25 25 |   end forall
26 26 | 
27 27 |   label7: if (.true.) then
28    |-  end if
   28 |+  end if label7
29 29 | 
30 30 |   label8: select case(i)
31 31 |   end select

./resources/test/fixtures/correctness/C143.f90:40:3: C143 [*] 'end where' statement in named 'where' block missing label
   |
39 |   label11: where(i > 0)
40 |   end where
   |   ^^^^^^^^^ C143
41 |   
42 |   label_yes1: associate(x => 1 + 1)
   |
   = help: Add label 'label11'

ℹ Safe fix
37 37 |   end select
38 38 | 
39 39 |   label11: where(i > 0)
40    |-  end where
   40 |+  end where label11
41 41 |   
42 42 |   label_yes1: associate(x => 1 + 1)
43 43 |   end associate label_yes1
